Fixing alignment of latest update images

--- a/scss/components/_posts.scss
+++ b/scss/components/_posts.scss
@@ -19,11 +19,18 @@
     margin-bottom: u(1rem);
   }
 
-  img {
-    float: right;
-    margin-left: u(2rem);
-    height: 150px;
-    width: auto;
+  .rich-text {
+    img {
+        float: right;
+        margin-left: u(2rem);
+        height: 150px;
+        width: auto;
+      }
+
+    // Hide tables that might be in the body content from the scraped pages
+    table {
+      display: none;
+    }
   }
 }
 
